[project]
name = "circuitdb"
version = "2.0.0"
description = "Data set of optimal circuits for Boolean functions that have low arity."
license = {file = "LICENSE"}
authors = [
    {name = "Andrei Lapets"},
    {email = "a@lapets.io"}
]
readme = "README.rst"
requires-python = ">=3.7"
dependencies = [
    "bitlist~=1.0",
    "logical~=2.0",
    "circuit~=2.0"
]

[project.urls]
homepage = "https://github.com/reity/circuitdb"
repository = "https://github.com/reity/circuitdb"
documentation = "https://circuitdb.readthedocs.org"

[project.optional-dependencies]
docs = [
    "toml~=0.10.2",
    "sphinx~=4.2.0",
    "sphinx-rtd-theme~=1.0.0"
]
test = [
    "pytest~=7.0",
    "pytest-cov~=3.0"
]
lint = [
    "pylint~=2.14.0"
]
coveralls = [
    "coveralls~=3.3.1"
]
publish = [
    "twine~=4.0"
]

[build-system]
requires = [
    "build~=0.8",
    "setuptools~=62.0",
    "wheel~=0.37"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs --cov=circuitdb --cov-report term-missing"
